# cs336_1

./: .gitignore  CLAUDE.md  pyproject.toml
accelerator_rust/: Cargo.toml  pyproject.toml
accelerator_rust/src/: lib.rs
accelerator_rust/src/components/: mod.rs  output.rs  sequence.rs  tpair.rs
bpe_impl/: __init__.py  bpe_train.py  train_and_save.py
cs336_basics/tokenizer/: impl.py  main.py
cs336_basics/transformer/: attn.py  embedding.py  impl.py  rope.py  swiglu.py
cs336_basics/utils/: checkpointing.py  data.py  loss.py  optimizer.py
linear/: impl.py
scripts/: decode.py  train.py
scripts/conf/: run.yaml
tests/: adapters.py  test_model.py  test_tokenizer.py
tokenizer/: impl.py  linkedsq.py  main.py  tokenizer.py
transformer/: attn.py  block.py  impl.py  linear.py  rmsnorm.py  rope.py  swiglu.py
